- mobile related content title not showing fix

--- a/web/app/themes/Foody/resources/sass/pages/common/_playlists-list.scss
+++ b/web/app/themes/Foody/resources/sass/pages/common/_playlists-list.scss
@@ -106,7 +106,7 @@
     &.related-recipes {
 
       .related-content-title {
-        display: none;
+        //display: none;
       }
 
       .related-recipes {
